--- a/brigade/brigade-composite-resource-definition.yaml
+++ b/brigade/brigade-composite-resource-definition.yaml
@@ -25,3 +25,5 @@ spec:
             properties:
               region:
                 type: string
+              binding:
+                type: string
