--- a/helm/myhelmishdatastore-claim.yaml
+++ b/helm/myhelmishdatastore-claim.yaml
@@ -3,7 +3,7 @@ kind: MyHelmishDataStore
 metadata:
   name: brigade-jellin
 spec:
-  mem: 100
+  enablePersistence: True
   writeConnectionSecretToRef:
     name: brigade-helmish-jellin
                       
