--- a/rds/definition.yaml
+++ b/rds/definition.yaml
@@ -13,6 +13,7 @@ spec:
   - host
   - port
   - type
+  - database
   names:
     kind: XMyDataStore
     plural: xmydatastores
@@ -27,8 +28,20 @@ spec:
         openAPIV3Schema:
           type: object
           properties:
+            status:
+              type: object
+              properties:
+                secondResource:
+                  type: string
+                binding:
+                  type: object
+                  properties:
+                    name:
+                      type: string
             spec:
               type: object
               properties:
-                mem:
-                  type: integer
+                databasename:
+                  type: string
+                enablePersistence:
+                  type: boolean
