--- a/rds/mydatastore-composition.yaml
+++ b/rds/mydatastore-composition.yaml
@@ -47,7 +47,8 @@ spec:
        - name: type
          value: postgresql
        - name: database
-         value: petclinic
+         type: FromFieldPath
+         fromFieldPath: spec.forProvider.values.auth.database
       patches:
         # get the values for the chart from the claim
         - fromFieldPath: "spec.enablePersistence"
